[tool.poetry]
name = "streamlit-portfolio"
version = "0.1.0"
description = "A Streamlit app for portfolio overview and crypto data plotting"
authors = ["Lea Alonzo <leamonicaalonzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
streamlit = "^1.41.1"
pandas = "^2.2.3"
requests = "^2.32.3"
matplotlib = "^3.10.0"
streamlit-lottie = "^0.0.5"
plotly = "^5.24.1"
validators = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
